[package]
name = "simple"
version = "0.1.0"
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-cacher-rs = { git = "https://github.com/tawashichan/data-cacher-rs.git",branch="main"}
tokio = {features = ["time","sync","rt-multi-thread","macros"], version = "0.3.5"}
async-trait = "*"